force-app/main/default/objects/TriggerActiveInactive__mdt/TriggerActiveInactive__mdt.object-meta.xml
<CustomObject>
    <label>TriggerActiveInactive</label>
    <pluralLabel>TriggerActiveInactives</pluralLabel>
</CustomObject>