force-app/main/default/objects/TriggerActiveInactive__mdt/fields/isAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>isAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterDelete</label>
    <type>Checkbox</type>
</CustomField>