force-app/main/default/objects/TriggerActiveInactive__mdt/fields/isAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>isAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterInsert</label>
    <type>Checkbox</type>
</CustomField>