force-app/main/default/objects/TriggerActiveInactive__mdt/fields/isAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>isAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterUpdate</label>
    <type>Checkbox</type>
</CustomField>