force-app/main/default/objects/TriggerActiveInactive__mdt/fields/isBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>isBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBeforeDelete</label>
    <type>Checkbox</type>
</CustomField>