force-app/main/default/objects/TriggerActiveInactive__mdt/fields/isBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>isBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBeforeInsert</label>
    <type>Checkbox</type>
</CustomField>