force-app/main/default/objects/TriggerActiveInactive__mdt/fields/isBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>isBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>